# rkllm-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  License  README.md  README.zh_TW.md  build.rs  rkllm.h  wrapper.h
.github/workflows/: rust.yml
examples/: cross_attn.rs  demo.rs  function_call.rs  multi_instance.rs  safe_api.rs
rkllm-rs/: Cargo.toml
rkllm-rs/src/: main.rs
rkllm-sys-rs/: Cargo.toml  build.rs  rkllm.h
rkllm-sys-rs/src/: lib.rs
src/: lib.rs  main.rs
