[package]
name = "rkllm-rs"
version = "0.1.10"
edition = "2021"
description = "rkllm rust ffi binding"
license-file = "License"
homepage = "https://github.com/darkautism/rkllm-rs"
documentation = "https://docs.rs/crate/rkllm-rs/"

[features]
default = []
bin = ["clap"]
online_config = ["autotokenizer"]

[dependencies]
futures = "0.3.31"

[dependencies.autotokenizer]
version = "0.1.2"
optional = true

[dependencies.clap]
version = "4.5.45"
optional = true

[build-dependencies]
bindgen = "0.72.0"

[[bin]]
name = "rkllm"
path = "src/main.rs"
required-features = ["clap"]
