[package]
name = "rkllm-rs"
version = "0.1.13"
edition = "2021"
description = "rkllm rust ffi binding"
license-file = "License"
homepage = "https://github.com/darkautism/rkllm-rs"
documentation = "https://docs.rs/crate/rkllm-rs/"

[features]
default = []
bin = ["clap"]
online_config = ["autotokenizer"]

[dependencies]
futures = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.autotokenizer]
version = "0.1.3"
optional = true

[dependencies.clap]
version = "4.5.53"
optional = true

[build-dependencies]
bindgen = "0.72.1"

[[bin]]
name = "rkllm"
path = "src/main.rs"
required-features = ["clap"]
