[workspace]
members = ["rkllm-sys-rs"]
resolver = "2"

[package]
name = "rkllm-rs"
version = "0.1.14"
edition = "2021"
description = "rkllm rust ffi binding"
license-file = "License"
homepage = "https://github.com/darkautism/rkllm-rs"
documentation = "https://docs.rs/crate/rkllm-rs/"

[features]
default = []
bin = ["clap"]
online_config = ["autotokenizer"]

[dependencies]
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkllm-sys-rs = { path = "rkllm-sys-rs", version = "0.1.0" }

[dependencies.autotokenizer]
version = "0.1.3"
optional = true

[dependencies.clap]
version = "4.5.53"
optional = true

[[bin]]
name = "rkllm"
path = "src/main.rs"
required-features = ["clap"]
